@@ -40,11 +40,6 @@ A list of all bugs open for the next v3.0.2 release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  *) Transformation plugins cause connection close when content length is not known ahead
-   Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1197133
-   Jira: https://issues.apache.org/jira/browse/TS-1004
-   +1: briang, zwoop, manjesh
-
   *) forward map based on request receive port
    Trunk patch: (see TS876.fixed.patch in JIRA)
    Jira: https://issues.apache.org/jira/browse/TS-876
